@@ -1,6 +1,9 @@
 # ChangeLog for app-text/wv2
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wv2/ChangeLog,v 1.3 2003/04/13 21:09:57 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wv2/ChangeLog,v 1.4 2003/07/07 09:26:26 brain Exp $
+*wv-0.1 (07 Jul 2003)
+  07 Jul 2003; Michele Balistreri <brain@gentoo.org> wv2-0.1.ebuild:
+  Version bump, thanks to Franz Dhin <fd@redspot.dk>.
 
   14 Apr 2003; Dan Armak <danarmak@gentoo.org> wv2-0.0.8.ebuild,
   wv2-0.0.9.ebuild:
